# haploid

./: .gitignore  Cargo.toml  NOTICE  README.md
benchmarks/: README.md
benchmarks/examples/: example_1.smt2
benchmarks/regression-tests/: README.md
benchmarks/regression-tests/bugs/: break_00.smt2  break_01.smt2  break_02.smt2  crash_00.smt2  crash_01.smt2  crash_02.smt2  crash_03.smt2  crash_04.smt2  left-assoc.smt2  nary_equalities.smt2  string-00.smt2
benchmarks/regression-tests/constant_folding/: add_01.smt2  and_00.smt2  and_01.smt2  and_02.smt2  and_03.smt2  and_04.smt2  and_05.smt2  and_06.smt2  and_07.smt2  and_08.smt2  and_09.smt2  and_10.smt2  and_11.smt2  and_12.smt2  and_13.smt2  div_00.smt2  div_01.smt2  div_02.smt2  div_03.smt2  implies_00.smt2  implies_01.smt2  implies_02.smt2  implies_03.smt2  implies_04.smt2  implies_05.smt2  implies_06.smt2  implies_07.smt2  implies_08.smt2  implies_09.smt2  implies_10.smt2  implies_11.smt2  (+26 more)
documentation/: adding_an_smt_function.md
fuzz_testing/: README.md
fuzz_testing/minimizing_crashes/: README.md
fuzz_testing/scripts/: build-murxla.sh  clean_fuzzing_query.py  fuzz-haploid.py
scripts/: README.md  can-haploid-solve.py  clean_query.py  find-unique-files.py  handle_cvc4.py  handle_cvc5.py  handle_z3_4_8_17.py  handle_z3_4_8_5.py  regression-tester.py
src/: README.md  dump_commands.rs  lib.rs  lift_assert_or_and.rs  parse_input.rs  sort_commands.rs  split_assert_and.rs
src/simplify_asserts/: README.md  analysis.rs  ast_to_recexpr.rs  cost.rs  language.rs  mod.rs  recexpr_to_ast.rs  rewrite_rules.rs
(+61 files in other folders)
